[package]
name = "mygit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
clap = "2.33.0"
rust-crypto = "^0.2"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.2"
flate2 = "1.0.28"
