[package]
name = "waterdb"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "waterdb-server"
path = "src/bin/server.rs"

[[bin]]
name = "waterdb-cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
serde = "~1.0.126"
serde_bytes = "~0.11.12"
serde_derive = "~1.0.126"
log = "0.4.20"
lazy_static = "1.4.0"
bincode = "1.3.3"
tokio-serde = { version = "~0.8", features = ["bincode"] }
hex = "~0.4.3"
derivative = "~2.2.0"
regex = "1.10.2"
clap = { version = "~4.4.2", features = ["cargo"] }
config = "~0.13.3"

[dev-dependencies]
tempdir = "~0.3.7"
paste = "~1.0.14"
serial_test = "~2.0.0"
