[package]
name = "rust_file_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
ansi_rgb = "0.2.0"
rand = "0.8.4"
bincode = "1.3.3"