[package]
name = "database-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.2"
clap = { version = "3.1.18", features = ["cargo"] }
prettytable-rs = "0.8.0"
thiserror = "1.0.31"
sqlparser = "0.17.0"
log = "0.4.17"
env_logger = "0.9.0"
rustyline-derive = "0.6.0"
serde = { version = "1.0.137", features = ["derive", "rc"] }
